syntax = "proto3";

package test_protocol;

//TEST 客户端 发送聊天
message TESTChatMessage
{
	uint32 id = 1;
	string talkMsg = 2;
}

